<resources>
    <string name="app_name">CFC</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>


    <string name="play_button">Play</string>
    <string name="pause_button">Pause</string>
    <string name="stop_button">Stop</string>
    <string name="download_button">Download</string>
    <string name="sermon_title">Sermons</string>
    <string name="about_verse">Matthew 9:37-38\nThen he said to his disciples, “The harvest is plentiful but the workers are few. Ask the Lord of the harvest, therefore, to send out workers into his harvest field.”</string>
    <string name="about_vision">A vision to raise up quality Kingdom workers to meet the great need in the harvest field, changing lives and the world with the Gospel of Jesus Christ.</string>
    <string name="listen_button">Listen</string>
    <string name="drawer_open">drawer open</string>
    <string name="drawer_close">drawer closed</string>

    <string name="website_button">Website</string>
    <string name="facebook_button">Facebook</string>

    <string name="notification_title">Title</string>
    <string name="notification_speaker">Speaker</string>
    <string name="notification_passage">Passage</string>
    <string name="notification_icon">Notification Icon</string>
    <string name="notification_play_pause_button">Notification play pause</string>
    <string name="notification_close_button">Notification close</string>

    <string name="latest_sermons">Latest Sermons</string>
    <string name="newest_sermon">Latest Sermon</string>

    <string name="announcements">Upcoming Events</string>
    <string name="announcement_title">Title</string>
    <string name="announcement_date">Date</string>
    <string name="announcement_time">Time</string>
    <string name="announcement_location">Location</string>

</resources>
