<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_gravity="center"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        card_view:cardBackgroundColor="#ffffff"
        card_view:cardMaxElevation="4dp"
        card_view:cardUseCompatPadding="true"
        card_view:cardCornerRadius="0dp"
        >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/announcement_image"
                android:contentDescription="@string/announcements"
                android:layout_width="match_parent"
                android:layout_height="175dp"
                android:scaleType="fitXY"
                android:layout_gravity="top"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp"
                >

                <TextView
                    android:id="@+id/announcement_title"
                    android:text="@string/announcement_title"
                    android:textStyle="bold"
                    android:textSize="16dp"
                    android:textColor="@color/mainText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/announcement_date"
                    android:text="@string/announcement_date"
                    android:textColor="@color/subText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/announcement_time"
                    android:text="@string/announcement_time"
                    android:textColor="@color/subText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/announcement_location"
                    android:text="@string/announcement_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </LinearLayout>


        </LinearLayout>

    </android.support.v7.widget.CardView>



</ScrollView>