<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="4"
        android:orientation="horizontal"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="20dp"
        >

        <ImageView
            android:id="@+id/pastorPhoto"
            android:src="@drawable/pmin"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:gravity="start"
            android:layout_gravity="start"
            />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_marginLeft="40dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/media_title"
            android:text="@string/notification_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/sermon_player_speaker"
            android:text="@string/notification_speaker"
            android:layout_below="@id/media_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/sermon_player_passage"
            android:text="@string/notification_passage"
            android:layout_below="@id/sermon_player_speaker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </RelativeLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="4"
        android:paddingBottom="4dp"
        >

        <SeekBar
            android:id="@+id/sermon_audio_seekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="2dp"
            />
        <RelativeLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            >

            <TextView
                android:id="@+id/media_current_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35dp"
                android:text="00:00"
                />
            <TextView
                android:id="@+id/media_total_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:paddingRight="35dp"
                android:text="00:00"
                />


        </RelativeLayout>

        <ImageButton
            android:id="@+id/media_play_button"
            android:background="@drawable/pause_button"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:gravity="start"
            android:layout_gravity="center_horizontal"
            android:visibility="invisible"
            />


        <RelativeLayout
            android:id="@+id/sermon_loading_circle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center" >

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true" />
        </RelativeLayout>










    </LinearLayout>



</LinearLayout>